Started improving memory management with std::unique_ptr

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,16 +19,16 @@ Size=227,171
 Collapsed=0
 
 [Window][Performance]
-Pos=8,8
-Size=278,339
+Pos=8,27
+Size=279,214
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x00000008,0
 
 [Window][Controls]
-Pos=8,8
-Size=278,339
+Pos=8,27
+Size=279,214
 Collapsed=0
-DockId=0x0000000A,2
+DockId=0x00000008,1
 
 [Window][Spec]
 Pos=997,283
@@ -36,10 +36,10 @@ Size=246,55
 Collapsed=0
 
 [Window][Shader settings]
-Pos=8,8
-Size=278,339
+Pos=1970,1157
+Size=582,212
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000C,0
 
 [Window][Light settings]
 Pos=243,214
@@ -52,50 +52,58 @@ Size=238,60
 Collapsed=0
 
 [Window][Node details]
-Pos=8,349
-Size=278,336
+Pos=8,243
+Size=279,709
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000006,0
 
 [Window][Scene graph]
-Pos=8,687
-Size=278,682
+Pos=8,954
+Size=279,415
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000A,0
 
 [Window][Viewer]
-Pos=288,8
-Size=1646,1147
+Pos=289,27
+Size=1678,1128
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Console]
-Pos=288,1157
-Size=2264,212
+Pos=289,1157
+Size=1679,212
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
 
 [Window][Shader editor]
-Pos=1936,8
-Size=616,1147
+Pos=1969,27
+Size=583,1128
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Main Window]
-Pos=0,0
-Size=2560,1377
+Pos=0,19
+Size=2560,1358
 Collapsed=0
 
+[Window][Texture viewer]
+Pos=1969,27
+Size=583,1128
+Collapsed=0
+DockId=0x00000005,1
+
 [Docking][Data]
-DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,8 Size=2544,1361 Split=X Selected=0x652D1CFE
-  DockNode      ID=0x00000001 Parent=0xF97EAFDC SizeRef=278,1064 Split=Y Selected=0xF5BE1C77
-    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=212,529 Split=Y Selected=0x30ED4B54
-      DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=212,265 Selected=0x60B79D0E
-      DockNode  ID=0x0000000B Parent=0x00000008 SizeRef=212,262 Selected=0x7B48E3C3
-    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=212,533 Selected=0xF5BE1C77
-  DockNode      ID=0x00000007 Parent=0xF97EAFDC SizeRef=1624,1064 Split=Y
+DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,27 Size=2544,1342 Split=X Selected=0x652D1CFE
+  DockNode      ID=0x00000001 Parent=0xF97EAFDC SizeRef=279,1064 Split=Y Selected=0xF5BE1C77
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=212,214 Selected=0x67284010
+    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=212,1126 Split=Y Selected=0x7B48E3C3
+      DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=295,709 Selected=0x7B48E3C3
+      DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=295,415 Selected=0xF5BE1C77
+  DockNode      ID=0x00000007 Parent=0xF97EAFDC SizeRef=2263,1064 Split=Y
     DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1213,1147 Split=X Selected=0x652D1CFE
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1646,796 CentralNode=1 Selected=0x652D1CFE
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=616,796 Selected=0x9A45A5E0
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1213,212 Selected=0x49278EEE
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1678,796 CentralNode=1 Selected=0x652D1CFE
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=583,796 Selected=0x1470EB58
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1213,212 Split=X Selected=0x49278EEE
+      DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=1679,212 Selected=0x49278EEE
+      DockNode  ID=0x0000000C Parent=0x00000003 SizeRef=582,212 Selected=0x30ED4B54
 
