Using std::shared_ptr for deleting reused textures almost done

--- a/imgui.ini
+++ b/imgui.ini
@@ -65,7 +65,7 @@ DockId=0x0000000A,0
 
 [Window][Viewer]
 Pos=289,27
-Size=1678,1128
+Size=1679,1128
 Collapsed=0
 DockId=0x00000004,0
 
@@ -76,8 +76,8 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Shader editor]
-Pos=1969,27
-Size=583,1128
+Pos=1970,27
+Size=582,1128
 Collapsed=0
 DockId=0x00000005,0
 
@@ -87,8 +87,14 @@ Size=2560,1358
 Collapsed=0
 
 [Window][Texture viewer]
-Pos=1969,27
-Size=583,1128
+Pos=1970,27
+Size=582,1128
+Collapsed=0
+DockId=0x00000005,2
+
+[Window][Script editor]
+Pos=1970,27
+Size=582,1128
 Collapsed=0
 DockId=0x00000005,1
 
@@ -101,8 +107,8 @@ DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,27 Size=2544,1342 Split=X 
       DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=295,415 Selected=0xF5BE1C77
   DockNode      ID=0x00000007 Parent=0xF97EAFDC SizeRef=2263,1064 Split=Y
     DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1213,1147 Split=X Selected=0x652D1CFE
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1678,796 CentralNode=1 Selected=0x652D1CFE
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=583,796 Selected=0x1470EB58
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1679,796 CentralNode=1 Selected=0x652D1CFE
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=582,796 Selected=0x646EBB19
     DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1213,212 Split=X Selected=0x49278EEE
       DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=1679,212 Selected=0x49278EEE
       DockNode  ID=0x0000000C Parent=0x00000003 SizeRef=582,212 Selected=0x30ED4B54
