--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(libs/assimp EXCLUDE_FROM_ALL)
 add_subdirectory(libs/glfw EXCLUDE_FROM_ALL)
 add_subdirectory(libs/glm EXCLUDE_FROM_ALL)
 add_subdirectory(libs/lua-5.4.7 EXCLUDE_FROM_ALL)
+add_subdirectory(libs/bullet3 EXCLUDE_FROM_ALL)
 
 # Find all source files
 file(GLOB MAIN_SRC "src/*.c" "src/*.cpp")
@@ -93,6 +94,7 @@ target_include_directories(VectorGL PUBLIC
 	libs/glm
 	libs/ImGui
 	libs/lua-5.4.7/src
+	libs/bullet3/src
 )
 
 target_link_libraries(VectorGL PUBLIC
