Trying to get Bullet running but having issues with unresolved externals

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,9 @@ target_link_libraries(VectorGL PUBLIC
 	assimp
 	glfw
 	lua
+	BulletCollision
+	BulletDynamics
+	LinearMath
 	OpenGL::GL)
 
 # Copy all assets to build folder
