--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ file(GLOB IO_SRC "src/io/*.c" "src/io/*.cpp")
 file(GLOB KHR_SRC "src/KHR/*.c" "src/KHR/*.cpp")
 file(GLOB LIGHTS_SRC "src/lights/*.c" "src/lights/*.cpp")
 file(GLOB MATERIALS_SRC "src/materials/*.c" "src/materials/*.cpp")
+file(GLOB PHYSICS_SRC "src/physics/*.c" "src/physics/*.cpp")
 file(GLOB UTILITIES_SRC "src/utilities/*.c" "src/utilities/*.cpp")
 
 # Find all header files
@@ -33,6 +34,7 @@ file(GLOB IO_INCLUDES "includes/io/*.h" "includes/io/*.hpp")
 file(GLOB KHR_INCLUDES "includes/KHR/*.h" "includes/KHR/*.hpp")
 file(GLOB LIGHTS_INCLUDES "includes/lights/*.h" "includes/lights/*.hpp")
 file(GLOB MATERIALS_INCLUDES "includes/materials/*.h" "includes/materials/*.hpp")
+file(GLOB PHYSICS_INCLUDES "includes/physics/*.h" "includes/materials/*.hpp")
 file(GLOB UTILITIES_INCLUDES "includes/utilities/*.h" "includes/utilities/*.hpp")
 
 # Add sources to target
@@ -44,6 +46,7 @@ add_executable(VectorGL
 	${KHR_SRC}
 	${LIGHTS_SRC}
 	${MATERIALS_SRC}
+	${PHYSICS_SRC}
 	${UTILITIES_SRC}
 
 	${MAIN_INCLUDES}
@@ -53,6 +56,7 @@ add_executable(VectorGL
 	${KHR_INCLUDES}
 	${LIGHTS_INCLUDES}
 	${MATERIALS_INCLUDES}
+	${PHYSICS_INCLUDES}
 	${UTILITIES_INCLUDES}
 
 	${LUA_SRC_INCLUDES}
@@ -77,6 +81,7 @@ source_group("src\\io" FILES ${IO_SRC})
 source_group("src\\KHR" FILES ${KHR_SRC})
 source_group("src\\lights" FILES ${LIGHTS_SRC})
 source_group("src\\materials" FILES ${MATERIALS_SRC})
+source_group("src\\physics" FILES ${PHYSICS_SRC})
 source_group("src\\utilities" FILES ${UTILITIES_SRC})
 
 source_group("includes" FILES ${MAIN_INCLUDES})
@@ -86,6 +91,7 @@ source_group("includes\\io" FILES ${IO_INCLUDES})
 source_group("includes\\KHR" FILES ${KHR_INCLUDES})
 source_group("includes\\lights" FILES ${LIGHTS_INCLUDES})
 source_group("includes\\materials" FILES ${MATERIALS_INCLUDES})
+source_group("includes\\physics" FILES ${PHYSICS_INCLUDES})
 source_group("includes\\utilities" FILES ${UTILITIES_INCLUDES})
 
 # Add header files
