--- a/imgui.ini
+++ b/imgui.ini
@@ -20,13 +20,13 @@ Collapsed=0
 
 [Window][Performance]
 Pos=8,27
-Size=279,214
+Size=279,273
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Controls]
 Pos=8,27
-Size=279,214
+Size=279,273
 Collapsed=0
 DockId=0x00000008,1
 
@@ -36,8 +36,8 @@ Size=246,55
 Collapsed=0
 
 [Window][Shader settings]
-Pos=1970,1157
-Size=582,212
+Pos=1495,860
+Size=417,212
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -52,63 +52,69 @@ Size=238,60
 Collapsed=0
 
 [Window][Node details]
-Pos=8,243
-Size=279,709
+Pos=8,302
+Size=279,445
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene graph]
-Pos=8,954
-Size=279,415
+Pos=8,749
+Size=279,323
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Viewer]
 Pos=289,27
-Size=1679,1128
+Size=810,831
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Console]
-Pos=289,1157
-Size=1679,212
+Pos=289,860
+Size=1204,212
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Shader editor]
-Pos=1970,27
-Size=582,1128
+Pos=1101,27
+Size=811,831
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Main Window]
 Pos=0,19
-Size=2560,1358
+Size=1920,1061
 Collapsed=0
 
 [Window][Texture viewer]
-Pos=1970,27
-Size=582,1128
+Pos=1101,27
+Size=811,831
 Collapsed=0
 DockId=0x00000005,2
 
 [Window][Script editor]
-Pos=1970,27
-Size=582,1128
+Pos=1101,27
+Size=811,831
 Collapsed=0
 DockId=0x00000005,1
 
+[Window][Top view]
+Pos=1101,27
+Size=811,831
+Collapsed=0
+DockId=0x00000005,3
+
 [Docking][Data]
-DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,27 Size=2544,1342 Split=X Selected=0x652D1CFE
+DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,27 Size=1904,1045 Split=X Selected=0x652D1CFE
   DockNode      ID=0x00000001 Parent=0xF97EAFDC SizeRef=279,1064 Split=Y Selected=0xF5BE1C77
-    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=212,214 Selected=0x67284010
-    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=212,1126 Split=Y Selected=0x7B48E3C3
-      DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=295,709 Selected=0x7B48E3C3
-      DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=295,415 Selected=0xF5BE1C77
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=212,273 Selected=0x60B79D0E
+    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=212,770 Split=Y Selected=0x7B48E3C3
+      DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=295,445 Selected=0x7B48E3C3
+      DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=295,323 Selected=0xF5BE1C77
   DockNode      ID=0x00000007 Parent=0xF97EAFDC SizeRef=2263,1064 Split=Y
     DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1213,1147 Split=X Selected=0x652D1CFE
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1679,796 CentralNode=1 Selected=0x652D1CFE
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=582,796 Selected=0x646EBB19
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=810,796 CentralNode=1 Selected=0x652D1CFE
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=811,796 Selected=0x1470EB58
     DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1213,212 Split=X Selected=0x49278EEE
       DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=1679,212 Selected=0x49278EEE
       DockNode  ID=0x0000000C Parent=0x00000003 SizeRef=582,212 Selected=0x30ED4B54
