Fixed a large amount of warnings (clang-tidy)  mostly in include files.

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,13 +20,13 @@ Collapsed=0
 
 [Window][Performance]
 Pos=8,27
-Size=279,263
+Size=279,253
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Controls]
 Pos=8,27
-Size=279,263
+Size=279,253
 Collapsed=0
 DockId=0x00000008,1
 
@@ -36,7 +36,7 @@ Size=246,55
 Collapsed=0
 
 [Window][Shader settings]
-Pos=1446,820
+Pos=1446,783
 Size=400,212
 Collapsed=0
 DockId=0x0000000C,0
@@ -52,60 +52,60 @@ Size=238,60
 Collapsed=0
 
 [Window][Node details]
-Pos=8,292
-Size=279,428
+Pos=8,282
+Size=279,412
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene graph]
-Pos=8,722
-Size=279,310
+Pos=8,696
+Size=279,299
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Viewer]
 Pos=289,27
-Size=954,791
+Size=1228,754
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Console]
-Pos=289,820
+Pos=289,783
 Size=1155,212
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Shader editor]
-Pos=1245,27
-Size=601,791
+Pos=1519,27
+Size=327,754
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Main Window]
 Pos=0,19
-Size=1854,1021
+Size=1854,984
 Collapsed=0
 
 [Window][Texture viewer]
 Pos=1245,27
 Size=601,791
 Collapsed=0
-DockId=0x00000005,2
+DockId=0x00000004,2
 
 [Window][Script editor]
 Pos=1245,27
 Size=601,791
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000004,1
 
 [Window][Top view]
 Pos=1245,27
 Size=601,791
 Collapsed=0
-DockId=0x00000005,3
+DockId=0x00000004,3
 
 [Docking][Data]
-DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,27 Size=1838,1005 Split=X Selected=0x652D1CFE
+DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,27 Size=1838,968 Split=X Selected=0x652D1CFE
   DockNode      ID=0x00000001 Parent=0xF97EAFDC SizeRef=279,1064 Split=Y Selected=0xF5BE1C77
     DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=212,273 Selected=0x60B79D0E
     DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=212,770 Split=Y Selected=0x7B48E3C3
@@ -113,8 +113,8 @@ DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,27 Size=1838,1005 Split=X 
       DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=295,323 Selected=0xF5BE1C77
   DockNode      ID=0x00000007 Parent=0xF97EAFDC SizeRef=2263,1064 Split=Y
     DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1213,1147 Split=X Selected=0x652D1CFE
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=954,796 CentralNode=1 Selected=0x652D1CFE
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=601,796 Selected=0x1470EB58
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1228,754 CentralNode=1 Selected=0x652D1CFE
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=327,754 Selected=0x9A45A5E0
     DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1213,212 Split=X Selected=0x49278EEE
       DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=1679,212 Selected=0x49278EEE
       DockNode  ID=0x0000000C Parent=0x00000003 SizeRef=582,212 Selected=0x30ED4B54
